# nucr

./: Cargo.toml  LICENSE  NuGet.Config.Debug  README.md
.github/: workflows
.github/workflows/: rust.yml
src/: main.rs
